rtg_tests/negative/excluded_select/go.mod
module example.com/rtgtests/negative/select

go 1.25
